# Falcon_Money_Tracker

./: .gitignore  CMakeLists.txt  README.md  build.sh  clang_script.sh  debug.cmake  out.txt
client/: README.md  cli.py  client.py  menu.py
client/common/: fmt_constants.py
common/: CMakeLists.txt
common/include/: common_macros.h  net_io_stream.h  print_utilities.h  signals.h
common/src/: linked_list.c  net_io_stream.c  print_utilities.c  signals.c
falcon_generic_server/: CMakeLists.txt
falcon_generic_server/include/: manage_fds.h  net_io_stream.h  server_interface.h
falcon_generic_server/src/: manage_fds.c  net_io_stream.c  server_interface.c
falcon_generic_server/threadpool/: README.md
falcon_generic_server/threadpool/include/: linked_list.h  signals.h  threadpool.h
falcon_generic_server/threadpool/src/: linked_list.c  signals.c  threadpool.c
include/: cli.h  client_interface.h  client_session.h  net_io_stream.h  server_interface.h
include/common/: entities.h  packet_manager.h
include/prog_feats/: login.h  signup.h
src/: cli.c  client_interface.c  client_session.c  main.c  net_io_stream.c  server_interface.c
src/common/: entities.c  packet_manager.c
src/prog_feats/: login.c  signup.c
